--- a/google-glass.html
+++ b/google-glass.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8"/>
 	<title> Informaçoes sobre Google Glass</title>
 	<style>
-	body {
+	body::-webkit-scrollbar {
 		font-family: Arial;
 		font-size: 10pt;
+		overflow-x: hidden;
 	}
 	p {
 		text-align: justify;
