--- a/_textos/specs-txt.html
+++ b/_textos/specs-txt.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+	
 <head>
 		<meta charset="UTF-8"/> 
 		<title> Tudo sobre Google Glass </title>	
 		<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="_javascript/funcoes.js">
+</script>
+
 <body>
 <div id="interface">
-	
+
 	<header id="cabecalho">
 		<hgroup>
 			<h1>Google Glass</h1>
 			<h2>A revolução do Google está chegando</h2>
 	</hgroup>
-	
-	<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/>
+	<img id="icone" src="imagens/glass-oculos-preto-peq.png">
 	<nav id="menu">
 		<h1>Menu Principal</h1>
 		<ul type="disc">
@@ -27,14 +29,28 @@
 			</ul>
 		</nav>	
 	</header>
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+	
+<section id="corpo-full">
+	<article id="noticia-principal">
+<header id="cabecalho-artigo">
+<hgroup>
+<h3>Glass > Especificações </h3>
+<h1>Raio-X no Google Glass</h1>
+<h2>por Gustavo Guanabara</h2>
+<h3 class="direita">Atualizado em 01/Maio/2013</h3>
+</hgroup>
+</header>
+	</article>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+		<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-[AQUI ENTRA UMA IMAGEM]
+
+	<section id="conteudo">
+	< img src="_imagens;glass-esquema-marcado.jpg"/>
+	<section>
+	</article>
+</section>
+
 <footer id="rodape">
 <p>Copyright &copy; 2020 - by Gustavo Guanabara </br>
 <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook </a> 
