--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,9 +4,9 @@
 <head>
 		<meta charset="UTF-8"/> 
 		<title> Tudo sobre Google Glass </title>	
-		<link rel="stylesheet" href="_css/estilo.css"/>
-		<link rel="stylesheet" href="_css/form.css"/>
-		<script language="javascript" src="_javascript/funcoes.js"></script>
+		<link rel="stylesheet" href="css/estilo.css"/>
+		<link rel="stylesheet" href="css/form.css"/>
+		<script language="javascript" src="javascript/funcoes.js"></script>
 		<script>	
 			function calc_total () {
 				var qtd = parseInt(document.getElementById('cQtd').value);
@@ -24,15 +24,15 @@
 			<h1>Google Glass</h1>
 			<h2>A revolução do Google está chegando</h2>
 	</hgroup>
-	<img id="icone" src="_imagens/fotos.png"/>
+	<img id="icone" src="imagens/fotos.png"/>
 	<nav id="menu">
 		<h1>Menu Principal</h1>
 		<ul type="disc">
-				<li onmouseover="mudaFoto('_imagens/home.png')"onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html">Home</a></li>
-				<li onmouseover="mudaFoto('_imagens/especificacoes.png')"onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
-				<li onmouseover="mudaFoto('_imagens/fotos.png')"onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos.html"> Fotos</a></li>
-				<li onmouseover="mudaFoto('_imagens/multimidia.png')"onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
-				<li onmouseover="mudaFoto('_imagens/contato.png')"onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+				<li onmouseover="mudaFoto('imagens/home.png')"onmouseout="mudaFoto('imagens/fotos.png')"><a href="index.html">Home</a></li>
+				<li onmouseover="mudaFoto('imagens/especificacoes.png')"onmouseout="mudaFoto('imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
+				<li onmouseover="mudaFoto('imagens/fotos.png')"onmouseout="mudaFoto('imagens/fotos.png')"><a href="fotos.html"> Fotos</a></li>
+				<li onmouseover="mudaFoto('imagens/multimidia.png')"onmouseout="mudaFoto('imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
+				<li onmouseover="mudaFoto('imagens/contato.png')"onmouseout="mudaFoto('imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 			</ul>
 		</nav>	
 	</header>
@@ -101,7 +101,7 @@
 	<input type="text" name="tTot" id="cTot" placeholder="Total a Pagar" readonly/></p>
 	</fieldset>
 	
-	<input type="image" name="tEnviar" src="_imagens/botao-enviar.png"/>
+	<input type="image" name="tEnviar" src="imagens/botao-enviar.png"/>
 </form>
 
 </article>
