--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 <head>
 
-		<meta charset="UTF-8"/> 
 		<title> Tudo sobre Google Glass </title>	
-		<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+		<meta charset="UTF-8"/> 
+		<link rel="stylesheet" href="css/estilo.css"/>
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="cabecalho">
@@ -15,15 +15,15 @@
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 	
-	<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/>
+	<img id="icone" src="imagens/glass-oculos-preto-peq.png"/>
 <nav id="menu">
 <h1>Menu Principal</h1>
 <ul type="disc">
-	<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-	<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-	<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html"> Fotos</a></li>
-	<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-	<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+	<li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+	<li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+	<li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html"> Fotos</a></li>
+	<li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+	<li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 </ul>
 </nav>	
 	</header>
@@ -40,13 +40,13 @@
 </header>
 
 <h2>O que é</h2>
-<p> O <spam style="font-weight:900;"> Google Glass </spam> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="https://www.google.com/glass/start/" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
-
+<p> O <spam style="font-weight:900"> Google Glass </spam> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="https://www.google.com/glass/start/" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 <figure class="foto-legenda">
-	<img src="_imagens/glass-quadro-homem-mulher.jpg"/>	
+	<img src="imagens/glass-quadro-homem-mulher.jpg"/>	
 	<figcaption>
 	<h3>Google Glass</h3>
 	<p>Uma nova maneira de ver o mundo</p>
+</figcaption>
 </figure>
 
 <h2>Data de lançamento</h2>
@@ -70,10 +70,10 @@
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-<video id="filme" controls="controls" poster="_imagens/video-mini01.jpg">
-<source src="_media/getting-started.mp4" type="video/mp4"/>
-<source src="_media/getting-started.webm" type="video/webm"/>
-<source src="_media/getting-started.ogv" type="video/ogg"/>
+<video id="filme" controls="controls" poster="imagens/video-mini01.jpg">
+<source src="media/getting-started.mp4" type="video/mp4"/>
+<source src="media/getting-started.webm" type="video/webm"/>
+<source src="media/getting-started.ogv" type="video/ogg"/>
 Desculpe, mas não foi possível carregar o vídeo.
 </article>
 </section>
@@ -81,10 +81,10 @@ Desculpe, mas não foi possível carregar o vídeo.
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
 
-<video id="filme2" controls="controls" poster="_imagens/video-mini02.jpg">
-<source src="_media/getting-started.mp4" type="video/mp4"/>
-<source src="_media/getting-started.webm" type="video/webm"/>
-<source src="_media/getting-started.ogv" type="video/ogg"/>
+<video id="filme2" controls="controls" poster="imagens/video-mini02.jpg">
+<source src="media/getting-started.mp4" type="video/mp4"/>
+<source src="media/getting-started.webm" type="video/webm"/>
+<source src="media/getting-started.ogv" type="video/ogg"/>
 Desculpe, mas não foi possível carregar o vídeo.
 </video>
 
